--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,26 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
+		<plugin>
+		<groupId>org.apache.tomcat.maven</groupId>
+		<artifactId>tomcat7-maven-plugin</artifactId>
+		<version>2.2</version>
+		<configuration>
+			<url>http://localhost:8085/manager/text</url>
+			<server>TomcatServer</server>
+			<path>/WebApp</path>
+		</configuration>
+	</plugin>
+			<plugin>
+		<groupId>org.apache.tomcat.maven</groupId>
+		<artifactId>tomcat7-maven-plugin</artifactId>
+		<version>2.2</version>
+		<configuration>
+			<url>http://localhost:8085/manager/text</url>
+			<server>TomcatServer</server>
+			<path>/WebApp</path>
+		</configuration>
+	</plugin>
             <plugin>
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <executions>
