--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
 		<configuration>
 			<url>http://localhost:8085/manager/text</url>
 			<server>TomcatServer</server>
-			<path>/WebApp</path>
+			<path>/ROOT</path>
 		</configuration>
 	</plugin>
 			<plugin>
@@ -49,7 +49,7 @@
 		<configuration>
 			<url>http://localhost:8085/manager/text</url>
 			<server>TomcatServer</server>
-			<path>/WebApp</path>
+			<path>/ROOT</path>
 		</configuration>
 	</plugin>
             <plugin>
